--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-abcxyz
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
+  <title>Trang chủ - Minecraft Resources</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    Minecraft Resources Share
+  </header>
+
+  <nav>
+    <a href="index.html">Trang chủ</a>
+    <a href="plugins.html">Plugins</a>
+    <a href="configs.html">Configs</a>
+    <a href="models.html">Models</a>
+    <a href="setup.html">File Setup</a>
+    <a href="add-resource.html">Thêm Tài Nguyên</a>
+  </nav>
+
+  <div class="container">
+    <h2>✨ Chào mừng đến với kho tài nguyên Minecraft ✨</h2>
+    <p>Tại đây bạn có thể tìm <span style="color:var(--accent1);font-weight:bold;">Plugins</span>, 
+       <span style="color:var(--accent2);font-weight:bold;">Configs</span>, 
+       <span style="color:var(--accent3);font-weight:bold;">Models</span>, 
+       và <span style="color:var(--accent1);font-weight:bold;">File Setup</span>.</p>
+
+    <!-- Demo Cards -->
+    <div class="card">
+      <h3>🚀 Plugin Hot</h3>
+      <p>Những plugin được tải nhiều nhất, tối ưu cho server Minecraft của bạn.</p>
+      <button>Xem ngay</button>
+    </div>
+
+    <div class="card">
+      <h3>⚙️ Configs</h3>
+      <p>Các file cấu hình đẹp, tối ưu, dễ sử dụng.</p>
+      <button>Khám phá</button>
+    </div>
+
+    <div class="card">
+      <h3>🎨 Models</h3>
+      <p>Mô hình 3D và texture pack độc lạ dành cho server.</p>
+      <button>Tải về</button>
+    </div>
+  </div>
+</body>
+</html>
